functioning numerical reporter with sockets, fixing css for overflow, fixed scoping numerical reporter

--- a/css/gui.css
+++ b/css/gui.css
@@ -65,6 +65,7 @@ svg {
     font-weight: bold;
     font-size: 18px;
     width: 100px;
+    overflow:hidden;
 }
 
 .param_title{
@@ -210,3 +211,4 @@ svg {
     justify-content: center;
     flex-direction: row;
 }
+
